bk_ida/gccida/c2/force_to_mode
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7104:28: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  force_to_mode( rtx x, machine_mode mode, unsigned __int64 mask, rtx reg, int just_select) 
                           ^
                           enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7111:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7135:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v36; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7140:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v41; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7192:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v94; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7201:4: error: expected ';' after expression
rtx v103; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7201:5: error: use of undeclared identifier 'v103'
rtx v103; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7203:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v105; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7204:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v106; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7210:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v112; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7217:4: error: expected ';' after expression
rtx v119; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7217:5: error: use of undeclared identifier 'v119'
rtx v119; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7220:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v122; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7228:4: error: expected ';' after expression
rtx v130; // [rsp+0h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7228:5: error: use of undeclared identifier 'v130'
rtx v130; // [rsp+0h] [rbp-78h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7230:4: error: expected ';' after expression
rtx v132; // [rsp+8h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7230:5: error: use of undeclared identifier 'v132'
rtx v132; // [rsp+8h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7232:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+20h] [rbp-58h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/combine.c:7233:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v137; // [rsp+30h] [rbp-48h] 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/force_to_mode/src/obj/combine.o] Error 1
